<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreorless"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/shrift"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/textViewDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice"
        android:textSize="32sp"
        android:fontFamily="@font/shrift"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMore"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:fontFamily="@font/shrift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextValue"/>

    <ImageView
        android:id="@+id/imageDice1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@id/buttonMore"
        app:layout_constraintEnd_toStartOf="@id/imageDice2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDice" />

    <ImageView
        android:id="@+id/imageDice2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@id/buttonMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDice1"
        app:layout_constraintTop_toBottomOf="@id/textViewDice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMore"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_green"
        android:padding="10dp"
        android:fontFamily="@font/shrift"
        android:text="@string/more"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonLess"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLess"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_red"
        android:padding="10dp"
        android:fontFamily="@font/shrift"
        android:text="@string/less"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonMore" />

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/value"
        android:fontFamily="@font/shrift"
        android:inputType="number"
        android:padding="7dp"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorPrimaryVariant"
        android:textColorHint="?attr/colorPrimaryVariant"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@id/textViewScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDice" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/textview_white"
        android:paddingTop="7dp"
        android:paddingEnd="5dp"
        android:paddingBottom="7dp"
        android:text="0"
        android:textAlignment="center"
        android:fontFamily="@font/shrift"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextValue"
        app:layout_constraintTop_toBottomOf="@id/textViewDice" />

</androidx.constraintlayout.widget.ConstraintLayout>