<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreorless"
        android:textSize="32sp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/shrift"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/textViewDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice"
        android:textSize="32sp"
        android:fontFamily="@font/shrift"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMore"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@id/textViewDice"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="60dp" >

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/textview_white"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/shrift"
            android:text="0"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:fontFamily="@font/shrift"
            android:text="+"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:fontFamily="@font/shrift"
        android:text="@string/play"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay1"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:fontFamily="@font/shrift"
        android:text="@string/rules"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:fontFamily="@font/shrift"
        android:text="@string/settings"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRule" />

</androidx.constraintlayout.widget.ConstraintLayout>